--- a/package.json
+++ b/package.json
@@ -9,20 +9,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-scroll-area": "^1.0.3",
     "@reduxjs/toolkit": "^1.9.3",
     "appwrite": "^10.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.9.0",
+    "react-simple-maps": "^3.0.0",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-simple-maps": "^3.0.0",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
-    "vite": "^4.2.0"
+    "vite": "^4.2.0",
+    "vite-tsconfig-paths": "^4.0.7"
   }
 }
