--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-simple-maps": "^3.0.0",
-    "styled-components": "^5.3.9"
+    "styled-components": "^5.3.9",
+    "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
