--- a/package.json
+++ b/package.json
@@ -12,16 +12,20 @@
     "@radix-ui/react-scroll-area": "^1.0.3",
     "@reduxjs/toolkit": "^1.9.3",
     "appwrite": "^10.2.0",
+    "d3-scale": "^4.0.2",
+    "leaflet": "^1.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
-    "react-simple-maps": "^3.0.0",
     "styled-components": "^5.3.9",
     "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
+    "@types/d3-scale": "^4.0.3",
+    "@types/leaflet": "^1.9.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-simple-maps": "^3.0.0",
