--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "styled-components": "^5.3.9",
+    "uuid": "^9.0.0",
     "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
@@ -30,6 +31,7 @@
     "@types/react-dom": "^18.0.11",
     "@types/react-simple-maps": "^3.0.0",
     "@types/styled-components": "^5.1.26",
+    "@types/uuid": "^9.0.1",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
